[gd_scene load_steps=5 format=2]

[ext_resource path="res://followEnemy.gd" type="Script" id=1]
[ext_resource path="res://art/bulletBub.png" type="Texture" id=2]
[ext_resource path="res://art/popB.ogg" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 265.745

[node name="wow" type="Sprite"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 6
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 19.0703, 16.9514 )
shape = SubResource( 1 )

[node name="Stun_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Pop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 10.0

[node name="Die_timer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="timeout" from="Stun_timer" to="." method="_on_Stun_timer_timeout"]
[connection signal="timeout" from="Die_timer" to="." method="_on_Die_timer_timeout"]
